# deployment-skeleton-fastapi

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: ace7d8939d1c_.py
fastapi_sandbox/: database.py  dependencies.py  main.py  models.py  schemas.py  settings.py
fastapi_sandbox/handlers/: entity.py
fastapi_sandbox/views/: entity.py  readiness.py  views.py
k8s/: ingress.yml  job.yml  replication_set.yml  service.yml
src/alembic/: env.py
src/alembic/versions/: 42f0676f9812_.py  d442e7c42359_.py
src/fastapi_sandbox/: dependencies.py  main.py  models.py  schemas.py  settings.py
src/fastapi_sandbox/handlers/: entity.py
src/fastapi_sandbox/views/: entity.py  health.py  hostname.py  readiness.py
src/tests/: conftest.py
tests/: conftest.py
